# wiktionary-cli

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: main.cpp
src/impl/: http_fetch.cpp  parse_word.cpp  parse_word_page.cpp  wiktionary.cpp  wiktionary_http_fetch.cpp
src/impl/util/: url_encode.cpp
src/proto/: exceptions.h  http_fetch.h  parse_word.h  parse_word_page.h  wiktionary.h
src/proto/util/: url_encode.h
